--- a/Holli Galli/Base.lproj/Main.storyboard
+++ b/Holli Galli/Base.lproj/Main.storyboard
@@ -28,7 +28,7 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="56"/>
                                 <state key="normal" title="Join Game"/>
                                 <connections>
-                                    <action selector="joinGameButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="IRf-4H-K1h"/>
+                                    <action selector="joinGameButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="PI8-Cb-eBH"/>
                                 </connections>
                             </button>
                         </subviews>
