--- a/Holli Galli/Base.lproj/Main.storyboard
+++ b/Holli Galli/Base.lproj/Main.storyboard
@@ -116,7 +116,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zX8-Dw-5k8" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2368" y="133"/>
+            <point key="canvasLocation" x="2367.7777777777778" y="132.59259259259258"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="HRj-8r-9rK">
